--- a/VUE/vue-weather/public/index.html
+++ b/VUE/vue-weather/public/index.html
@@ -5,6 +5,8 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="icon" href="<%= BASE_URL %>favicon.ico">
+    <script src="http://echarts.baidu.com/gallery/vendors/echarts/echarts.min.js"></script>
+    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=392cc293ec417ef97a5494a5535a875e"></script>
     
     <title><%= htmlWebpackPlugin.options.title %></title>
   </head>
@@ -13,7 +15,7 @@
       <strong>We're sorry but <%= htmlWebpackPlugin.options.title %> doesn't work properly without JavaScript enabled. Please enable it to continue.</strong>
     </noscript>
     <div id="app"></div>
-    <script type="text/javascript" src="https://webapi.amap.com/maps?v=1.4.15&key=392cc293ec417ef97a5494a5535a875e"></script>
+    
     <!-- built files will be auto injected -->
   </body>
 </html>
