--- a/VUE/vue-instruction/vue基础知识/vue-template.html
+++ b/VUE/vue-instruction/vue基础知识/vue-template.html
@@ -11,21 +11,10 @@
       {{message}}
     </div>
   </template>
-  <script src="./vue.js"></script>
   <script>
-    export default {
-      name: 'tabs',
-      props: {
-        
-      }
-    }
-    const app = new Vue({
-      el: '#app',
-      data: {
-        message: '你好'
-      }
-    })
-    
+    const pName = '李尊'
+    // pName = 'lizun'
+    console.log(pName);
   </script>
 </body>
 </html>
