--- a/VUE/vue-instruction/vue基础知识/组件访问.html
+++ b/VUE/vue-instruction/vue基础知识/组件访问.html
@@ -51,6 +51,7 @@
           show() {
             console.log(this.$parent);
             console.log(this.$parent.parentMessage);
+            console.log(this.$root.parentMessage);
           }
         }
         }, 
